apps/common/jupyternb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyternb
  namespace: jupyter
  labels:
    app: jupyternb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyternb
  template:
    metadata:
      labels:
        app: jupyternb
    spec:
      serviceAccountName: jupyter
      containers:
      - name: jupyternb
        image: mthorley/jnb:1.0
        ports:
          - name: jupyter-ui
            containerPort: 8888
            protocol: TCP
        securityContext:
          privileged: true
        volumeMounts:
        - name: jupyternb-data
          mountPath: /data
      volumes:
      - name: jupyternb-data
        persistentVolumeClaim:
          claimName: jupyternb-claim
