apps/common/jupyternb/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyternb
  namespace: jupyter
spec:
  selector:
    app: jupyternb
  type: LoadBalancer
  loadBalancerIP: "${jupyter_ip}"
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8888
