apps/common/jupyternb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-internal
  namespace: jupyter
spec:
  selector:
    app: jupyternb
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: jupyter-ui
      protocol: TCP
