apps/common/jupyternb/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: jupyter-gateway
  namespace: jupyter
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "jupyter.${domain}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${APP}-tls-prod"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jupyter
  namespace: jupyter
spec:
  parentRefs:
    - name: jupyter-gateway
  hostnames:
    - "jupyter.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jupyter-internal
          port: 80
