apps/common/jupyternb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jupyter
  namespace: jupyter
spec:
  rules:
  - host: jupyter.internal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyter-internal
            port:
              number: 80
  ingressClassName: nginx
